# opengl-raytracer

./: CMakeLists.txt
resources/shaders/: basic.frag  basic.vert
resources/shaders/quad/: vertex.glsl
src/: app.cpp  app.h  app.hpp  main.cpp
src/gfx/: pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h  window.hpp
src/util/: io.h
